# angular-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  angular.json  capacitor.config.ts  compose.yaml  karma.conf.js  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml.example
api/: api.rs  app_state.rs  argon2.rs  authenticator.rs  handlers.rs  lib.rs  models.rs  router.rs
api/handlers/: authentication.rs
api/models/: user.rs
api/router/: authentication.rs
migrations/: 0001_create_user_table.up.sql  0001_create_users_table.up.sql
src/: index.html
src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
src/app/pages/root/: root.html  root.spec.ts  root.ts
src/app/pages/root-page/: root-page.html  root-page.ng.html  root-page.spec.ts  root-page.ts
